--- a/public/locales/az/translation.json
+++ b/public/locales/az/translation.json
@@ -1,5 +1,5 @@
 {
   "home": "Ana Səhifə",
-  "Products": "Məhsullar",
-  "jewelery": "Ziynet əşyaları"
+  "products": "Məhsullar",
+  "jewelery": "Ziynet əşyalar"
 }
